Yocto_Infor/yocto_TXT/output_1566.txt
* error building core-image-full-cmdline image on kirkstone for powerpc 64 (meta-freescale, t1024rdb-64b machine)
@ 2022-08-01 13:29 Sona Sarmadi (ssarmadi)
  0 siblings, 0 replies; only message in thread
From: Sona Sarmadi (ssarmadi) @ 2022-08-01 13:29 UTC (permalink / raw)
  To: yocto

[-- Attachment #1: Type: text/plain, Size: 3290 bytes --]

Hi everyone,

I get some errors when I build “core-image-full-cmdline” for t1024rdb-64b machine. I fix the error then I get another one, so I wonder if anybody has seen these errors or if meta-freescale (kirkstone) has been tested/used by someone?


This is what I do:

  1.  clone poky kirkstone
  2.  clone meta-freescale kirskstone
  3.  edit conf/local.conf and add: MACHINE ??= "t4240rdb-64b"
  4.  edit conf/bblayer.conf and add meta-freescale layer
  5.  bitbake core-image-full-cmdline
Here are the errors I get:
#error 1:

| make -f /home/sona/shared/yocto-kirkstone/builds/ppc64/tmp/work/t1024rdb_64b-poky-linux/u-boot-qoriq/2021.04+fslgit-r0/git/scripts/Makefile.build obj=drivers
| powerpc-pokymllib32-linux-ld: board/freescale/t102xrdb/cpld.o:/home/sona/shared/yocto-kirkstone/builds/ppc64/tmp/work/t1024rdb_64b-poky-linux/u-boot-qoriq/2021.04+fslgit-r0/git/board/freescale/t102xrdb/cpld.h:24: multiple definition of `cpld_data_t'; board/freescale/t102xrdb/t102xrdb.o:

/home/sona/shared/yocto-kirkstone/builds/ppc64/tmp/work/t1024rdb_64b-poky-linux/u-boot-qoriq/2021.04+fslgit-r0/git/board/freescale/t102xrdb/cpld.h:24: first defined here


Vim cpld.h +24
struct cpld_data {
        u8 cpld_ver;            /* 0x00 - CPLD Major Revision Register */
        u8 cpld_ver_sub;        /* 0x01 - CPLD Minor Revision Register */
        u8 hw_ver;              /* 0x02 - Hardware Revision Register */
        u8 sw_ver;              /* 0x03 - Software Revision register */
        u8 res0[12];            /* 0x04 - 0x0F - not used */
        u8 reset_ctl1;          /* 0x10 - Reset control Register1 */
        u8 reset_ctl2;          /* 0x11 - Reset control Register2 */
        u8 int_status;          /* 0x12 - Interrupt status Register */
        u8 flash_csr;           /* 0x13 - Flash control and status register */
        u8 fan_ctl_status;      /* 0x14 - Fan control and status register  */
        u8 led_ctl_status;      /* 0x15 - LED control and status register */
        u8 sfp_ctl_status;      /* 0x16 - SFP control and status register  */
        u8 misc_ctl_status;     /* 0x17 - Miscellanies ctrl & status register*/
        u8 boot_override;       /* 0x18 - Boot override register */
        u8 boot_config1;        /* 0x19 - Boot config override register*/
        u8 boot_config2;        /* 0x1A - Boot config override register*/
} cpld_data_t;
Is “cpld_data_t” supposed to be a type definition (as the “_t” suffix indicates) or a variable declaration? Variable declarations in header files need “extern” and an accompanying variable definition in some C file.


#error 2:

   File "../yocto- kirkstone/builds/ppc64/tmp/work/t1024rdb_64b-poky-linux/u-boot-qoriq/2021.04+fslgit-r0/git/tools/binman/../binman/control.py", line 11, in <module>
|     import pkg_resources
| ModuleNotFoundError: No module named 'pkg_resources'

meta-freescale/recipes-bsp/u-boot/u-boot-qoriq_2021.04.bb

#error 3:

 ..yocto-kirkstone/builds/ppc64/tmp/work/t1024rdb_64b-poky-linux/lttng-modules/2.13.3-r0/lttng-modules-2.13.3/src/wrapper/kallsyms.c:20:3: error: #error "LTTng-modules requires CONFIG_KPROBES on kernels >= 5.7.0"
|    20 | # error "LTTng-modules requires CONFIG_KPROBES on kernels >= 5.7.0"


Thanks --Sona


[-- Attachment #2: Type: text/html, Size: 10159 bytes --]

^ permalink raw reply	[flat|nested] only message in thread
only message in thread, other threads:[~2022-08-01 13:29 UTC | newest]

Thread overview: (only message) (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2022-08-01 13:29 error building core-image-full-cmdline image on kirkstone for powerpc 64 (meta-freescale, t1024rdb-64b machine) Sona Sarmadi (ssarmadi)

